--- a/package.json
+++ b/package.json
@@ -7,9 +7,20 @@
   "license": "GNU General Public 3.0",
   "private": false,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@mantine/carousel": "^5.6.2",
+    "@mantine/core": "^5.6.2",
+    "@mantine/dates": "^5.6.2",
+    "@mantine/form": "^5.6.2",
+    "@mantine/hooks": "^5.6.2",
+    "@mantine/modals": "^5.6.2",
+    "@mantine/notifications": "^5.6.2",
+    "@mantine/rte": "^5.6.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dayjs": "^1.11.6",
+    "embla-carousel-react": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
