--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "Clément <clement.ozor@protonmail.com>",
   "license": "GNU General Public 3.0",
   "private": false,
+  "resolutions": {
+    "styled-components": "^5"
+  },
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@mantine/carousel": "^5.6.2",
@@ -25,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
