--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "dayjs": "^1.11.6",
     "embla-carousel-autoplay": "^7.0.3",
     "embla-carousel-react": "^7.0.3",
+    "i18next": "^22.0.3",
+    "i18next-browser-languagedetector": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^9.0.10",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
