--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 REACT_APP_DISCORD_LOGIN_URL=https://discord.com/api/oauth2/authorize?client_id=964847392543350835&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2F&response_type=code&scope=identify%20guilds
 REACT_APP_API_ENDPOINT=http://localhost:4000
 REACT_APP_DISCORD_7E_ID=864865934233960448
+
+REACT_APP_DISCORD_INVITE_URL=
+REACT_APP_TOP_SERVEURS_TOKEN=
