--- a/package.json
+++ b/package.json
@@ -12,16 +12,27 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@mantine/carousel": "^5.6.2",
-    "@mantine/core": "^5.6.2",
+    "@mantine/core": "^5.8.2",
     "@mantine/dates": "^5.6.2",
+    "@mantine/dropzone": "^5.8.2",
     "@mantine/form": "^5.6.2",
-    "@mantine/hooks": "^5.6.2",
+    "@mantine/hooks": "^5.8.2",
     "@mantine/modals": "^5.6.2",
     "@mantine/notifications": "^5.6.2",
     "@mantine/rte": "^5.6.2",
+    "@mantine/tiptap": "^5.8.2",
+    "@tabler/icons": "^1.112.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tiptap/extension-highlight": "^2.0.0-beta.202",
+    "@tiptap/extension-link": "^2.0.0-beta.202",
+    "@tiptap/extension-subscript": "^2.0.0-beta.202",
+    "@tiptap/extension-superscript": "^2.0.0-beta.202",
+    "@tiptap/extension-text-align": "^2.0.0-beta.202",
+    "@tiptap/extension-underline": "^2.0.0-beta.202",
+    "@tiptap/react": "^2.0.0-beta.202",
+    "@tiptap/starter-kit": "^2.0.0-beta.202",
     "dayjs": "^1.11.6",
     "embla-carousel-autoplay": "^7.0.3",
     "embla-carousel-react": "^7.0.3",
