--- a/package.json
+++ b/package.json
@@ -1,77 +1,22 @@
 {
-  "name": "arma-orbat",
-  "version": "1.0.0",
-  "description": "The 7th Company web application for Arma.",
-  "repository": "git@github.com:7eCompagnie/api.git",
-  "author": "Clément <clement.ozor@protonmail.com>",
-  "license": "GNU General Public 3.0",
-  "private": false,
-  "resolutions": {
-    "styled-components": "^5"
+  "name": "orbat",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@mantine/carousel": "^5.6.2",
-    "@mantine/core": "^5.8.2",
-    "@mantine/dates": "^5.6.2",
-    "@mantine/dropzone": "^5.8.2",
-    "@mantine/form": "^5.6.2",
-    "@mantine/hooks": "^5.8.2",
-    "@mantine/modals": "^5.6.2",
-    "@mantine/notifications": "^5.6.2",
-    "@mantine/rte": "^5.6.2",
-    "@mantine/tiptap": "^5.8.2",
-    "@tabler/icons": "^1.112.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@tiptap/extension-highlight": "^2.0.0-beta.202",
-    "@tiptap/extension-link": "^2.0.0-beta.202",
-    "@tiptap/extension-subscript": "^2.0.0-beta.202",
-    "@tiptap/extension-superscript": "^2.0.0-beta.202",
-    "@tiptap/extension-text-align": "^2.0.0-beta.202",
-    "@tiptap/extension-underline": "^2.0.0-beta.202",
-    "@tiptap/react": "^2.0.0-beta.202",
-    "@tiptap/starter-kit": "^2.0.0-beta.202",
-    "dayjs": "^1.11.6",
-    "embla-carousel-autoplay": "^7.0.3",
-    "embla-carousel-react": "^7.0.3",
-    "i18next": "^22.0.3",
-    "i18next-browser-languagedetector": "^7.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^9.0.10",
-    "react-router-dom": "6",
-    "react-scripts": "5.0.1",
-    "styled-components": "^5.3.6",
-    "tabler-icons-react": "^1.55.0",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "babel-plugin-styled-components": "^2.0.7"
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
+    "eslint": "8.28.0",
+    "eslint-config-next": "13.0.5",
+    "next": "13.0.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "typescript": "4.9.3"
   }
 }
