--- a/package.json
+++ b/package.json
@@ -9,9 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/server": "^11.10.0",
+    "@mantine/carousel": "^5.8.3",
+    "@mantine/core": "^5.8.3",
+    "@mantine/dates": "^5.8.3",
+    "@mantine/dropzone": "^5.8.3",
+    "@mantine/form": "^5.8.3",
+    "@mantine/hooks": "^5.8.3",
+    "@mantine/modals": "^5.8.3",
+    "@mantine/next": "^5.8.3",
+    "@mantine/notifications": "^5.8.3",
+    "@mantine/tiptap": "^5.8.3",
+    "@tabler/icons": "^1.113.0",
+    "@tiptap/extension-link": "^2.0.0-beta.204",
+    "@tiptap/react": "^2.0.0-beta.204",
+    "@tiptap/starter-kit": "^2.0.0-beta.204",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "dayjs": "^1.11.6",
+    "embla-carousel-react": "^7.0.5",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "next": "13.0.5",
